positioned timeline data on left side, fixed and aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,9 @@ footer li {
         padding: 40px 40px 100px 40px;
         text-transform: uppercase;
         line-height: 4;
+        width: 10%;
+        height: 80%;
+        text-align: center;
     }
 
     #timeline-data a {
